create long term goal use case + tests
